# ai-recruitment-system

./: .env.example  .gitignore  README.md  init_data.py  main.py  pyproject.toml
agents/: candidate.py  llms.py  prompts.py  resume.py
alembic/: env.py
alembic/versions/: a28c774864ea_add_unique_constraints_for_one_to_one_.py  b54a50aa8c8e_init_model.py  c7c74e826140_deltet_token_from_ding_user.py  f25e92457b9c_interview_enum_add_pedding.py
core/: auth.py  cache.py  dingtalk.py  email_templates.py  mail.py  ocr.py  single.py
core/email_bot/: test.py
dependencies/: __init__.py
docs/: python-async-and-database-drivers.md
models/: __init__.py  candidate.py  interview.py  positions.py  user.py
repository/: candidate_repo.py  position_repo.py  user_repo.py
routers/: candidate_router.py  dashboard_router.py  position_router.py  user_router.py
scheduler/: __init__.py
schemas/: __init__.py  agent_schema.py  cache_schema.py  candidate_schema.py  position_schema.py  user_schema.py
settings/: __init__.py
tasks/: __init__.py
templates/: dingtalk_auth_success.html
utils/: iso8601.py
