[project]
name = "ai-recruitment-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=1.4.8,<2.0",
    "chromadb>=1.5.9",
    "deepagents>=0.6.8",
    "fastapi>=0.137.1",
    "grandalf>=0.8",
    "pyjwt>=2.10.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openai>=2.40.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "ragas>=0.3.1",
    "shortuuid>=1.0.13",
    "tiktoken>=0.13.0",
    "wandb>=0.27.0",
    "redis>=8.0.0",
    "fastapi-mail>=1.6.5",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
]

[dependency-groups]
dev = ["alembic>=1.18.4", "mypy>=2.1.0"]
